fix overflow

--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,11 @@
-html {
-  scroll-behavior: smooth;
+html {    
+    scroll-behavior: smooth;    
+}
+
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
 .grid-container {
@@ -19,7 +25,7 @@ footer { grid-area: footer; }
 
 header { 
     grid-area: home;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
