--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 h1, h2, h3, h4, p, a{  color: #B4B4B4; }
 
 h1, h2, h3, h4, .center-text{ 
